Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76860

QML FolderDialog: CurrentFolder is not getting updated correctly

XMLWordPrintable

    • Windows
    • 4ec8c0700cd0e6bc1b2dfb08fff5e9e15288e047 (qt/qtdeclarative/dev) 7ee5b3536d5c6d8ab6e6de07b6032e0a35194961 (qt/qtdeclarative/6.2) a641e8ef74b8f2ad9dea03bdb7cc8c7c3c70e75e (qt/qtquickcontrols2/6.1)

      The FolderDialog from Qt.labs.platform 1.1 works with the native Windows dialog box, but has a minor anomaly. If I select a folder name within a folder, so that its name appears in the "Folder:" box at the bottom, and then click the accept button, it returns the containing folder, not the one I selected. I have to actually go into that folder and click the accept button. It would perhaps be better if, when clicking the accept button, if there's something in the "Folder:" box, setting the folder property to that before emitting the "accepted" signal.
      It is also expected if 'Folder' is set to “C:/folder1”, and 'currentFolder' to “C:/folder1/folder2”, it is expected to pre-select 'folder2'.
      Please refer to the attached sample.
       

        1. qtbug76860.qml
          0.5 kB
          Friedemann Kleint
        2. qtbug76860.zip
          2 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            pderocco Paul DeRocco
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: