QQuickPlatformFolderDialog: Allow opening selected folder

Before a folder needed to be made the current folder in the
OpenFolderDialog, now it is enough to select the folder in the dialog.

Fixes: QTBUG-76860
Change-Id: Icc91db76c0badc3b8397a87ec7202db41999dea3
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 4ec8c0700cd0e6bc1b2dfb08fff5e9e15288e047)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>